Refactored the code by version and added v5